--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,9 +3,9 @@
 // Color pallette:
 
 $color-background: #150734;
-$color-lighter: #0f2557;
-$color-normal: #28559a;
-$color-normal-lighter: #3778c2;
+$color-content: #0a1b42;
+$color-content-light: #0f2557;
+$color-dontknowyet: #3778c2;
 $color-highlight: #4b9fe1;
 
 * {
@@ -31,7 +31,7 @@ ul {
 }
 
 .logo-external {
-    max-width: 7rem;
+    max-width: 5rem;
     height: auto;
 }
 
@@ -68,5 +68,33 @@ header {
 
     .subtitle {
         margin-bottom: 0;
+    }
+}
+
+.content-wrapper {
+    background: $color-content;
+}
+
+.content-wrapper-light {
+    background: $color-content-light;
+}
+
+.links {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(130px, 0fr));
+    justify-content: center;
+    margin-top: 1em;
+
+    ul {
+        justify-content: center;
+    }
+
+    li {
+        margin-bottom: 0.5em;
+        justify-content: center;
+    }
+
+    #linkedin {
+        margin-top: 7px;
     }
 }
