--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -31,7 +31,7 @@ ul {
 }
 
 .logo-external {
-    max-width: 5rem;
+    max-width: 4.5rem;
     height: auto;
 }
 
@@ -41,7 +41,7 @@ ul {
 }
 
 .wrapper {
-    padding: 1.5em;
+    padding: 1em;
     max-width: 1200;
     margin: 0 auto;
 }
@@ -97,4 +97,18 @@ header {
     #linkedin {
         margin-top: 7px;
     }
+}
+
+.text-wrapper {
+    background: $color-content-light;
+}
+
+.text {
+    justify-content: center;
+    margin-left: 1em;
+    margin-right: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    font-size: .8em;
+    line-height: 1.4em;
 }
