--- a/src/style/main.css
+++ b/src/style/main.css
@@ -130,5 +130,8 @@ header ul li a {
   .hero-wrapper {
     min-height: 450px;
   }
+  h1 {
+    font-size: 2.5em;
+  }
 }
 /*# sourceMappingURL=main.css.map */
