--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -8,7 +9,7 @@ body {
   margin: 0;
   background-color: #150734;
   color: white;
-  font-family: "Montserrat";
+  font-family: "Roboto";
 }
 
 a {
@@ -100,6 +101,15 @@ header ul li a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  border-right: 1px solid #150734;
+}
+
+.links li:last-child {
+  border: 0;
+}
+
+.links li a {
+  padding-left: 25px;
 }
 
 .links #linkedin {
@@ -132,6 +142,9 @@ header ul li a {
   }
   h1 {
     font-size: 2.5em;
+  }
+  .subtitle {
+    font-size: 1.2em;
   }
 }
 /*# sourceMappingURL=main.css.map */
