--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');
 
 // Color pallette:
 
@@ -16,7 +17,7 @@ body {
     margin: 0;
     background-color: $color-background;
     color: white;
-    font-family: "Montserrat";
+    font-family: "Roboto";
 }
 
 a {
@@ -93,6 +94,15 @@ header {
     li {
         margin-bottom: 0.5em;
         justify-content: center;
+        border-right: 1px solid rgb(21, 7, 52);
+
+        &:last-child {
+            border: 0;
+        }
+
+        a {
+            padding-left: 25px;
+        }
     }
 
     #linkedin {
@@ -128,5 +138,9 @@ header {
 
     h1 {
         font-size: 2.5em;
+    }
+
+    .subtitle {
+        font-size: 1.2em;
     }
 }
